# digit_detect_classification

./: .gitignore  README.md  pyproject.toml  run.py
src/: preprocess.py  utils.py
src/components/: dataloader.py  mesr.py  models.py
src/pipeline/: data_prep.py  inference.py  train.py
