[project]
name = "cs6478-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "matplotlib>=3.10.1",
  "opencv-python>=4.11.0.86",
  "scipy>=1.15.2",
  "stubs>=1.0.0",
  "tqdm>=4.67.1",
  "torch==2.6.0+cu126",
  "torchvision==0.21.0+cu126",
  "torchaudio==2.6.0+cu126",
]

[[tool.uv.index]]
name     = "pytorch-cu126"
url      = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch       = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio  = { index = "pytorch-cu126" }
